update public html

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     />
     <link
       rel="stylesheet"
-      href="http://localhost:3000/assets/style.css"
+      href="%PUBLIC_URL%/assets/style.css"
     />
 
     <title>PayChat App</title>
